--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,30 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Escoje tu moto
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-card>
+        <!-- Aqui hacemos el bucle -->
+        <ion-list>
+            <!-- En la lista pasamos por a la otra pagina el objeto c, así se mostrará el detalle -->
+            <ion-item *ngFor="let c of componentes" [routerLink]="['/detalle',c]" detail>
+                <!-- Muestra la imagen -->
+                <ion-img [src]="c.foto" style="width: 80px; height: 80px; padding-right: 1em"></ion-img>
+                <!-- Muestra el modelo -->
+                <ion-label>{{c.modelo}}</ion-label>
+            </ion-item>
+        </ion-list>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+
+    </ion-card>
+    <!-- fab -->
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button>
+            <ion-icon name="add" routerLink="/add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
